Updated the scroll-to-top component SASS to try and fix issues on mobile

--- a/src/sass/components/scrolltotop.sass
+++ b/src/sass/components/scrolltotop.sass
@@ -7,9 +7,13 @@
 .scroll-to-top
     position: fixed
     bottom: 1rem
-    right: -3.75rem
-    width: 3.75rem
-    height: 3.75rem
+    right: -76px
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 60px
+    height: 60px
+    padding: 0
     border: 1px solid darken($chassis-purple, 5%)
     border-radius: 100%
     background-color: $chassis-purple
